--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Elena's portfolio" />
     <title>Elena's portfolio</title>
-    <link rel="icon" type="image/png" href="../src/images/favicon/cat.png" />
+    <link rel="icon" href="https://elenaustimenko.github.io/my-portfolio/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
