--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,19 @@
     <meta name="description" content="Elena's portfolio" />
     <title>Elena's portfolio</title>
     <link rel="icon" href="https://elenaustimenko.github.io/my-portfolio/favicon.ico" type="image/x-icon">
+    
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function(m,e,t,r,i,k,a){
+            m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+            m[i].l=1*new Date();
+            for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+            k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+        })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=103541913', 'ym');
+
+        ym(103541913, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
+    </script>
+    <!-- /Yandex.Metrika counter -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -14,5 +27,9 @@
       <div><img src="" style="position: absolute; left: -9999px" alt="" /></div>
     </noscript>
     <div id="root"></div>
+    
+    <!-- Yandex.Metrika noscript -->
+    <noscript><div><img src="https://mc.yandex.ru/watch/103541913" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika noscript -->
   </body>
 </html>
